have good print of ANTLR tree working.  will refactor into visitor pattern

--- a/space-core/pom.xml
+++ b/space-core/pom.xml
@@ -12,10 +12,16 @@
     <artifactId>space-core</artifactId>
 
     <dependencies>
+
         <dependency>
             <groupId>org.jkcsoft</groupId>
             <artifactId>java-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
