--- a/space-antlr/pom.xml
+++ b/space-antlr/pom.xml
@@ -24,6 +24,10 @@
     <dependencies>
 
         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4</artifactId>
             <scope>compile</scope>
