--- a/space-antlr/pom.xml
+++ b/space-antlr/pom.xml
@@ -50,6 +50,13 @@
             <groupId>org.jkcsoft</groupId>
             <artifactId>java-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jkcsoft</groupId>
+            <artifactId>space-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
