--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>space-antlr</module>
         <module>space-xsd-spec</module>
         <module>space-modello-spec</module>
+        <module>space-gpb</module>
     </modules>
 
     <dependencyManagement>
@@ -75,7 +76,7 @@
                 <plugin>
                     <groupId>org.antlr</groupId>
                     <artifactId>antlr4-maven-plugin</artifactId>
-                    <version>4.3</version>
+                    <version>4.5</version>
                 </plugin>
             </plugins>
         </pluginManagement>
