Matured the ANTLR-based grammars for a modern minimalistic syntax in Space2Parser.g4 and Space2Lexer.g4.  Currently parses a very basic Hello.space with a single Space Definition, some Coordinates, and a Function Definition with nested function call.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>space-xsd-spec</module>
         <module>space-modello-spec</module>
         <module>space-gpb</module>
+        <module>space-jflex</module>
     </modules>
 
     <dependencyManagement>
