--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.jkcsoft</groupId>
         <artifactId>jkcsoft-parent-pom</artifactId>
-        <version>1.2</version>
+        <version>1.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>space-parent</artifactId>
@@ -29,6 +29,7 @@
         <module>space-antlr</module>
         <!-- Aggregators -->
         <module>space-assembly</module>
+        <module>space-over-lists</module>
     </modules>
 
     <dependencyManagement>
