A bit broken. Cleaned up build after source restore.  Moved G1 ANTLR to separate module.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "space-intellij-plugin/antlr-adapter"]
 	path = space-intellij-plugin/antlr-adapter
 	url = https://github.com/antlr/jetbrains.git
+[submodule "space-intellij-plugin/adaptor"]
+	path = space-intellij-plugin/adaptor
+	url = https://github.com/antlr/jetbrains.git
