--- a/space-over-lists/pom.xml
+++ b/space-over-lists/pom.xml
@@ -21,7 +21,7 @@
                 <artifactId>antlr4-maven-plugin</artifactId>
                 <configuration>
                     <!--<sourceDirectory>./src/main/antlr4/org/jkcsoft/space/antlr</sourceDirectory>-->
-                    <!--<grammars>SpaceParser.g4</grammars>-->
+                    <!--<grammSpaceListsParser.g4r.g4</grammars>-->
                     <visitor>true</visitor>
                     <listener>true</listener>
                 </configuration>
