--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <modules>
         <module>space-core</module>
         <module>space-umlish</module>
@@ -25,16 +29,16 @@
         <module>space-gpb</module>
         <module>space-jflex</module>
         <module>space-lang-lib</module>
+        <module>space-over-lists</module>
         <!-- Providers -->
         <module>space-antlr</module>
         <!-- Aggregators -->
         <module>space-assembly</module>
-        <module>space-over-lists</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
-            <!-- The grammar compiler at https://mvnrepository.com/artifact/org.antlr/antlr4 -->
+
             <dependency>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4</artifactId>
@@ -48,7 +52,6 @@
                 <version>2.3.0</version>
             </dependency>
 
-            <!-- The runtime https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
             <dependency>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4-runtime</artifactId>
@@ -61,11 +64,16 @@
                 <version>4.12</version>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>2.5</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>1.4</version>
             </dependency>
 
             <dependency>
@@ -121,11 +129,13 @@
                     </configuration>
 -->
                 </plugin>
+
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>appassembler-maven-plugin</artifactId>
                     <version>1.10</version>
                 </plugin>
+
             </plugins>
 
         </pluginManagement>
