--- a/space-core/pom.xml
+++ b/space-core/pom.xml
@@ -12,6 +12,40 @@
 
     <artifactId>space-core</artifactId>
 
+    <dependencies>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jkcsoft</groupId>
+            <artifactId>java-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+        </dependency>
+
+    </dependencies>
+
     <build>
         <plugins>
 
@@ -42,7 +76,7 @@
                     <programs>
                         <program>
                             <id>space</id>
-                            <mainClass>org.jkcsoft.space.lang.runtime.Executor</mainClass>
+                            <mainClass>org.jkcsoft.space.SpaceMain</mainClass>
                         </program>
                     </programs>
                 </configuration>
@@ -52,30 +86,8 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
-
-    <dependencies>
-
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jkcsoft</groupId>
-            <artifactId>java-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr4-runtime</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-        </dependency>
-
-    </dependencies>
 
 </project>
