--- a/space-core/pom.xml
+++ b/space-core/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>commons-cli</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
