Compiles for first time in a while. Elaborated SJI to include Space var/assoc model. Intro'd more interfaces into AST including ComplexType vs SimpleType. Etched in a script engine to run Space from Java via JSR spec API.

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>space-antlr</module>
         <!-- Aggregators -->
         <module>space-assembly</module>
+        <module>space-script-provider</module>
         <!--<module>antlr-grammars-examples</module>-->
     </modules>
 
