Progress getting linker working after adding ref parts and imports. Work to do on function resolving.

--- a/space-antlr/pom.xml
+++ b/space-antlr/pom.xml
@@ -54,7 +54,7 @@
 
         <dependency>
             <groupId>org.jkcsoft</groupId>
-            <artifactId>java-core</artifactId>
+            <artifactId>java-utils</artifactId>
         </dependency>
 
         <dependency>
