--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,8 @@
 
             <dependency>
                 <groupId>org.jkcsoft</groupId>
-                <artifactId>java-core</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <artifactId>java-utils</artifactId>
+                <version>1.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.jkcsoft</groupId>
