--- a/space-core/pom.xml
+++ b/space-core/pom.xml
@@ -21,7 +21,7 @@
 
         <dependency>
             <groupId>org.jkcsoft</groupId>
-            <artifactId>java-core</artifactId>
+            <artifactId>java-utils</artifactId>
         </dependency>
 
         <dependency>
