--- a/space-over-lists/pom.xml
+++ b/space-over-lists/pom.xml
@@ -47,7 +47,7 @@
 
         <dependency>
             <groupId>org.jkcsoft</groupId>
-            <artifactId>java-core</artifactId>
+            <artifactId>java-utils</artifactId>
         </dependency>
 
         <dependency>
