--- a/space-umlish/pom.xml
+++ b/space-umlish/pom.xml
@@ -26,7 +26,7 @@
     <dependencies>
         <dependency>
             <groupId>org.jkcsoft</groupId>
-            <artifactId>java-core</artifactId>
+            <artifactId>java-utils</artifactId>
         </dependency>
     </dependencies>
 
